--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-watch": "~4.3.9",
+    "sass-module-importer": "^1.4.0",
     "typey": "^1.1.1",
     "yargs": "^6.6.0"
   }
