--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "include-media": "^1.4.9",
     "sass-module-importer": "^1.4.0",
     "typey": "^1.1.1",
+    "unitconversion": "^2.1.13",
     "yargs": "^6.6.0"
   }
 }
