--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
   },
   "homepage": "https://github.com/geminilabs/nolie.css#readme",
   "dependencies": {
-    "browser-sync": "^2.18.6",
+    "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
+    "gulp-autoprefixer": "^4.1.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
     "gulp-insert": "^0.5.0",
-    "gulp-notify": "~2.2.0",
+    "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-watch": "~4.3.9",
+    "gulp-sass": "^3.1.0",
+    "gulp-watch": "^5.0.0",
     "include-media": "^1.4.9",
     "sass-module-importer": "^1.4.0",
-    "typey": "^1.1.1",
+    "typey": "^1.1.2",
     "unitconversion": "^2.1.13",
-    "yargs": "^6.6.0"
+    "yargs": "^11.0.0"
   }
 }
