--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "nolie",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A CSS framework based on Typey.",
   "main": "dist/nolie.css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/geminilabs/nolie.css.git"
+    "url": "git+https://github.com/pryley/nolie.css.git"
   },
   "keywords": [
     "css",
     "framework",
+    "pryley",
     "geminilabs",
     "nolie",
     "sass",
@@ -18,24 +19,28 @@
   "author": "Paul Ryley",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/geminilabs/nolie.css/issues"
+    "url": "https://github.com/pryley/nolie.css/issues"
   },
-  "homepage": "https://github.com/geminilabs/nolie.css#readme",
+  "homepage": "https://github.com/pryley/nolie.css#readme",
   "dependencies": {
-    "browser-sync": "^2.23.6",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-cssnano": "^2.1.2",
+    "browser-sync": "^2.26.3",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-if": "^2.0.2",
     "gulp-insert": "^0.5.0",
     "gulp-notify": "^3.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-watch": "^5.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-watch": "^5.0.1",
     "include-media": "^1.4.9",
+    "pump": "^3.0.0",
     "sass-module-importer": "^1.4.0",
     "typey": "^1.1.2",
     "unitconversion": "^2.1.13",
-    "yargs": "^11.0.0"
+    "yargs": "^12.0.5"
+  },
+  "scripts": {
+    "build": "./node_modules/gulp/bin/gulp.js default --production"
   }
 }
